# tinyserver

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
client/: CMakeLists.txt  ts_client.c  ts_client.h
include/: tm.h  ts.h  ts_server.h  ts_tcp.h  tsc.h  tsdefs.h
include/internal/: ts_array.h  ts_crypto.h  ts_data_buf.h  ts_error.h  ts_int_array.h  ts_log.h  ts_mem.h  ts_miscellany.h  ts_mutex.h  uthash.h
mqtt/: CMakeLists.txt  mqtt.c  mqtt.h  mqtt_conn.c  mqtt_conn.h  mqtt_handle__unsubscribe.c  mqtt_handle_connect.c  mqtt_handle_disconnect.c  mqtt_handle_ping.c  mqtt_handle_publish.c  mqtt_handle_subscribe.c  mqtt_message.c  mqtt_message.h  mqtt_packets.c  mqtt_packets.h  mqtt_session.c  mqtt_session.h  mqtt_topics.c  mqtt_topics.h  mqtt_utils.c  mqtt_utils.h  topics.c  topics.h  ts_array.c  ts_mqtt.c  ts_mqtt.h  v3_packets.h
server/: CMakeLists.txt  ts_array.c  ts_crypto.c  ts_data_buf.c  ts_int_array.c  ts_internal.h  ts_server.c  ts_server.h  ts_tcp_conn.c  ts_tls.c  ts_tls.h  ts_ws.h
shared/: ts_crypto.c  ts_data_buf.c  ts_error.c  ts_log.c  ts_miscellany.c
src/: CMakeLists.txt  ts_configs.c  ts_conn__write_req.c  ts_conn__write_req.h  ts_crypto.c  ts_crypto.h  ts_data_buf.c  ts_data_pipe.c  ts_error.c  ts_int_array.c  ts_internal.h  ts_log.c  ts_log.h  ts_mem.c  ts_miscellany.c  ts_miscellany.h  ts_mutex.c  ts_net_util.c  ts_server.c  ts_server.h  ts_server_idle.c  ts_tcp.c  ts_tcp_conn.c  ts_tcp_conn.h  ts_tcp_listener.c  ts_tls.c  ts_tls.h  ts_ws.c  ts_ws.h
test/: CMakeLists.txt  MandatoryNormativeStatementsV311.md  basic_errors_test.c  basic_errors_test.cpp  mqtt_basic_test.c  mqtt_invalid_packet_test.c  mqtt_msg_delivery_test.c  mqtt_multi_pub_sub_test.c  mqtt_publish_test.c  mqtt_sub_unsub_test.c  mqtt_topic_test.c  mymqtt.c  mymqtt.h  mytcp.c  mytcp.cpp  mytcp.h  tcp_connect_test.c  tcp_connect_test.cpp  tcp_read_write_test.c  tcp_read_write_test.cpp  test-list.h  test.c  test.cpp  test_mqtt_msgs.c  test_mqtt_msgs.h  testutil.c  testutil.cpp  testutil.h  tinyunit.c  tinyunit.h  tls_connect_test.cpp  tls_test.c
test/certs/: README.txt  rsa_tinyintermediate.crt  rsa_tinyintermediate.key  rsa_tinyintermediate.pfx  rsa_tinyroot.crt  rsa_tinyroot.key  rsa_tinyroot.pfx  rsa_tinyserver.crt  rsa_tinyserver.key  rsa_tinyserver.pfx
test/tinyunit/: runner-unix.h  runner-win.c  runner-win.h  runner.c  runner.h  task.h
